src_frontend/styles/GameShelf.css
.game-shelf {
  margin-bottom: 2.5rem;
}

.game-shelf-title {
  font-size: 1.2rem;
  margin-bottom: 1rem;
  font-weight: bold;
}

.game-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
  gap: 10px;
  padding-top: 1rem;
  padding-bottom: 1rem;
  justify-content: center;
}

